--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
